# Geant4_e---gamma--n

./: .gitignore  CMakeLists.txt  CMakePresets.json  Hadr03.cc  MAIN.cc  README.md  gammas2.root  my_ta.mac  ta.mac  tantalum.mac  vcpkg.json  vis_my.mac
common/: CMakeLists.txt  ProgramOptions.cpp  ProgramOptions.h  ProgressBar.cpp  ProgressBar.h  StringTools.h  config.h.in
include/: EventAction.hh  ParticleInfo.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
plotting/: plot_ntuple.sh
scripts/: run.mac  run_vis.mac  vis_my.mac
src/: ApplicationMessenger.cpp  ApplicationMessenger.h  CMakeLists.txt  DetectorConstruction.cc  EventAction.cc  Geant4Application.cpp  Geant4Application.h  PhysicsList.cc  PrimaryGeneratorAction.cc  Run.cc  RunAction.cc  SteppingAction.cc  main.cpp
src/actions/: ActionInitialization.cc  RunAction.cc  SteppingAction.cc
src/analysis/: HistoManager.cc  HistoManager.hh  ParticleInfo.cpp
src/detector/: DetectorConstruction.cc  DetectorConstruction.hh
src/physics/: ElectronPhysics.cpp  ElectronPhysics.hh  PhysicsList.cc
src/run/: Run.cc  Run.hh
